Added more styling to the weather information

--- a/public/index.css
+++ b/public/index.css
@@ -17,7 +17,7 @@ body {
   min-height: 100vh;
 }
 
-.header{
+.header {
   height: 10vh;
   display: flex;
   justify-content: space-around;
@@ -25,16 +25,16 @@ body {
   font-weight: 100;
   background-color: black;
 }
-.app-name-text-1{
-    color: skyblue;
+.app-name-text-1 {
+  color: skyblue;
 }
-.app-name-text-2{
-    color: #9e8969;
+.app-name-text-2 {
+  color: #9e8969;
 }
-.app-name{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.app-name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .spinning-sun {
   display: inline-flex;
@@ -42,10 +42,10 @@ body {
   align-items: center;
 }
 .spinning-sun img {
-    width: 100%;
-    max-width: 50px;
-    animation: image-spinner 5s linear infinite forwards;
-  }
+  width: 100%;
+  max-width: 50px;
+  animation: image-spinner 5s linear infinite forwards;
+}
 .menu-icon-wrapper button {
   padding: 0.5em 1em;
   outline: none;
@@ -76,66 +76,81 @@ body {
   border: 1px solid transparent;
   background-color: #243b55;
   box-shadow: 2px 1px 2px #141e30;
- 
 }
-.search input[type = "submit"]{
-    transition: all 1000ms linear;
-    background-color: #141e30;
+.search input[type="submit"] {
+  transition: all 1000ms linear;
+  background-color: #141e30;
 }
-.search input[type = "submit"]:hover {
+.search input[type="submit"]:hover {
   color: whitesmoke;
   background-color: #9e8969;
   cursor: pointer;
 }
-.display{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 1em;
-    padding: 1em;
+.display {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1em;
+  padding: 1em;
 }
 
-.country{
-    text-align: center;
-    color: whitesmoke;
-    font-weight: 1000;
-
-}
-.weather-info-wrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #243b55;
-    margin: 1em 0;
-    box-shadow: 2px 1px 3px #141414;
-}
-.weather-info-wrapper p{
-    font-weight: 100;
-    color: whitesmoke;
-    text-transform: capitalize;
-}
-p.date{
-    padding: 1em;
-    color: palegreen;
-
-}
-
-
-table {
-  border-collapse: collapse;
-  background-color: #07192e;
+.country {
+  text-align: center;
   color: whitesmoke;
+  font-weight: 1000;
+}
+.weather-info-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #243b55;
+  margin: 1em 0;
+  box-shadow: 2px 1px 3px #141414;
+}
+.weather-info-wrapper {
+  font-weight: 100;
+  color: whitesmoke;
+  text-transform: capitalize;
+}
+.date {
+  padding: 1em;
+  color: #9e8969;
+}
+
+.humidity,
+.pressure,
+.wind-speed,
+.sunrise,
+.sunset {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  padding: 1em;
+  background-color: #07192e;
   margin: 1em;
+  border-radius: 10px;
+  color: #9e8969;
 }
-table,
-th,
-tr,
-td {
-  padding: 0.5em 1em;
+.temperature {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto;
+  padding: 1em;
+  background-color: #07192e;
+  margin: 1em;
+  border-radius: 10px;
+  color: #9e8969;
 }
-.inner-table,
-.inner-table td {
-  border: none;
+.morning,
+.day,
+.evening,
+.night,
+.min-temp,
+.max-temp {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 1em;
 }
 
 .main-header-text {
@@ -154,8 +169,8 @@ td {
   opacity: 1;
 }
 .header-text-container {
-  background-color: black;
-  box-shadow: 1px 1px 10px #141e30;
+  background-color: #243b55;
+  box-shadow: 1px 1px 10px black;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -234,6 +249,25 @@ div p.error-message a:hover {
   width: 100%;
 }
 
+@media screen and (max-width: 1100px) {
+  .display {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (max-width: 750px) {
+  .display {
+    grid-template-columns: 1fr;
+    padding: 0.5em;
+  }
+  .humidity,
+  .pressure,
+  .wind-speed,
+  .sunrise,
+  .sunset,
+  .temperature {
+    margin: 1em 0;
+  }
+}
 @keyframes image-spinner {
   0% {
     transform: rotate(0deg);
@@ -243,41 +277,39 @@ div p.error-message a:hover {
   }
 }
 
-
 /* Loading icon */
-.loader{
-    color: purple;
+.loader {
+  color: purple;
 }
 .lds-ripple {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-  }
-  .lds-ripple div {
-    position: absolute;
-    border: 4px solid purple;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid purple;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
     opacity: 1;
-    border-radius: 50%;
-    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
   }
-  .lds-ripple div:nth-child(2) {
-    animation-delay: -0.5s;
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
   }
-  @keyframes lds-ripple {
-    0% {
-      top: 36px;
-      left: 36px;
-      width: 0;
-      height: 0;
-      opacity: 1;
-    }
-    100% {
-      top: 0px;
-      left: 0px;
-      width: 72px;
-      height: 72px;
-      opacity: 0;
-    }
-  }
-  
+}
