--- a/public/index.css
+++ b/public/index.css
@@ -71,7 +71,7 @@ body {
 
 .search input {
   padding: 0.5em 1em;
-  color: teal;
+  color: whitesmoke;
   margin: 0.1em;
   border: 1px solid transparent;
   background-color: #243b55;
