--- a/public/index.css
+++ b/public/index.css
@@ -67,11 +67,11 @@ body {
   align-items: center;
   margin: 0 auto;
 }
-.label-text{
+/* .label-text{
   display: none;
   opacity: 0;
   position: absolute;
-}
+} */
 .search input {
   padding: 0.5em 1em;
   color: whitesmoke;
