--- a/public/index.css
+++ b/public/index.css
@@ -76,6 +76,7 @@ body {
   background-color: #243b55;
   box-shadow: 2px 1px 2px #141e30;
   font-family: "Open Sans Condensed", sans-serif;
+  font-size: 1.2em;
 }
 .search input::-webkit-input-placeholder {
   /* Edge */
