--- a/public/index.css
+++ b/public/index.css
@@ -166,7 +166,9 @@ body {
   grid-template-rows: auto;
   gap: 1em;
 }
-
+.pressure, .wind-speed{
+  text-transform: lowercase;
+}
 .main-header-text {
   text-align: center;
   font-weight: 100;
